Fixed mobile overflow issue and menu bug

--- a/app/assets/styles/modules/_load.css
+++ b/app/assets/styles/modules/_load.css
@@ -1,5 +1,9 @@
 /* Loader Styles */
 
+#content {
+  overflow-x: hidden;
+}
+
 #load {
     background-color: #fff;
     height: 100%;
